<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/tabs_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@color/black"
    android:elevation="10dp"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="5"
    app:layout_constraintBottom_toBottomOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/search_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:padding="1dp"
            android:src="@drawable/ic_search"
            app:tint="@color/grey4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/grey4"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favorites_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_favorite"
                app:tint="@color/grey4" />

            <TextView
                android:id="@+id/favorites_bubble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:background="@drawable/round_shape_round_red"
                android:paddingHorizontal="3dp"
                android:textColor="@android:color/white"
                android:textSize="8sp"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            android:textColor="@color/grey4"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/responses_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_responses"
            app:tint="@color/grey4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/responses"
            android:textColor="@color/grey4"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/messages_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:padding="3dp"
            android:src="@drawable/ic_messages"
            app:tint="@color/grey4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:textColor="@color/grey4"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_profile"
            app:tint="@color/grey4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/grey4"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>