<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.HomeFragment">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Search Bar -->
        <LinearLayout
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/shape_round_rectangular_grey2_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/search"
                app:tint="@color/grey3" />

            <EditText
                android:id="@+id/search_bar_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:autofillHints="@null"
                android:paddingHorizontal="5dp"
                android:hint="@string/position_key_words"
                android:inputType="text"
                android:fontFamily="@font/sf_pro_display_medium"
                android:textColor="@color/white"
                android:textColorHint="@color/grey3"
                android:enabled="false"
                android:ellipsize="end"
                android:singleLine="true" />

        </LinearLayout>

        <ImageButton
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_round_rectangular_grey2_10"
            android:padding="10dp"
            android:src="@drawable/ic_filter"
            android:contentDescription="@string/filter"
            app:tint="@color/grey3" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/horizontal_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="146dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/hardcoded_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="16dp"
        android:text="@string/vacancies_for_you"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_recycler_view"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/hardcoded_title" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_round_rectangular_blue_10"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/main_recycler_view" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey1"
        app:layout_constraintBottom_toTopOf="@id/tabs_linear_layout" />

    <include layout="@layout/bottom_tab_menu"/>


</androidx.constraintlayout.widget.ConstraintLayout>