<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_round_rectangular_grey2_10"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/is_favorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_favorite"
        android:background="@color/grey2"
        app:tint="@color/grey4"
        android:contentDescription="@string/favorites"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/looking_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@color/green"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/looking_number"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textSize="21sp"/>

    <TextView
        android:id="@+id/town"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/salary"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@color/white"
        android:textSize="15sp"/>
    
    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/town"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_marginTop="4dp"
        android:textSize="15sp"/>
    
    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toEndOf="@id/company"
        app:layout_constraintTop_toTopOf="@id/company"
        app:layout_constraintBottom_toBottomOf="@id/company"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/company_name"
        app:tint="@color/grey3"/>

    <ImageView
        android:id="@+id/experience_icon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_briefcase"
        app:layout_constraintTop_toBottomOf="@id/company"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/experience"
        app:tint="@color/grey3"/>

    <TextView
        android:id="@+id/experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/experience_icon"
        app:layout_constraintBottom_toBottomOf="@id/experience_icon"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@color/white"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/published_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/experience_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@color/grey3"
        android:textSize="15sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginHorizontal="16dp"
        android:padding="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_rectangular_green_30"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:letterSpacing="0"
        android:text="@string/apply"
        app:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/published_date" />

</androidx.constraintlayout.widget.ConstraintLayout>